--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -8,13 +8,15 @@
  */
 
 @import '../variables.css';
+/*@import '../bootstrap.scss';*/
+
 
 :root {
   --brand-color: #61dafb;
 }
 
 .root {
-  background: #373277;
+  background: #333;
   color: #fff;
 }
 
