--- a/src/components/Slider/Slider.css
+++ b/src/components/Slider/Slider.css
@@ -1,2 +1,10 @@
-@import "slick-carousel/slick/slick.scss";
-@import "slick-carousel/slick/slick-theme.scss";
+
+/* Slider */
+:global {
+    @import "slick-carousel/slick/slick.css";
+    @import "slick-carousel/slick/slick-theme.css";
+}
+.swiper-slide img{
+  width: 100%;
+  height: auto;
+}
