--- a/src/routes/home/Home.css
+++ b/src/routes/home/Home.css
@@ -1,12 +1,3 @@
-/**
- * React Starter Kit (https://www.reactstarterkit.com/)
- *
- * Copyright © 2014-2016 Kriasoft, LLC. All rights reserved.
- *
- * This source code is licensed under the MIT license found in the
- * LICENSE.txt file in the root directory of this source tree.
- */
-
 @import '../../components/variables.css';
 
 .root {
@@ -14,26 +5,41 @@
   padding-right: 20px;
 }
 
-.container {
-  margin: 0 auto;
-  padding: 0 0 40px;
-  max-width: var(--max-content-width);
+.content {
+    position: relative;
+    overflow: hidden;
 }
 
-.news {
-  padding: 0;
+.block-1 {
+    position: relative;
+    z-index: 70;
+    width: 100%;
+    min-height: 994px;
+}
+@media (max-height: 900px) {
+  .block-1 {
+      min-height: 900px;
+  }
+}
+@media (max-height: 800px) and (min-width: 1000px){
+  .block-1 {
+    min-height: 800px;
+  }
+}
+@media (max-height: 768px) and (min-width: 1000px) {
+  .block-1 {
+     min-height: 768px;
+  }
 }
 
-.newsItem {
-  list-style-type: none;
-  padding-bottom: 6px;
-}
 
-.newsTitle {
-  font-size: 1.125em;
-}
 
-.newsTitle,
-.newsDesc {
-  display: block;
+
+.media {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  overflow: hidden;
 }
