--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -11,7 +11,7 @@
 
 .root {
   margin-top: -61px;
-  background: #333;
+  background: #f9ecde;
   color: #fff;
 }
 
@@ -23,7 +23,8 @@
 }
 
 .text {
-  color: rgba(255, 255, 255, 0.5);
+  /*color: rgba(255, 255, 255, 0.5);*/
+  color: #000;
 }
 
 .textMuted {
