--- a/src/components/Feedback/Feedback.css
+++ b/src/components/Feedback/Feedback.css
@@ -8,9 +8,6 @@
  */
 
 @import '../variables.css';
-:global {
-  @import '../bootstrap.css';
-}
 
 .root {
   background: #f5f5f5;
@@ -25,6 +22,24 @@
   font-size: 1.5em; /* ~24px */
 }
 
-.control {
-  color: red;
+.submit {
+  width: auto;
+  padding: 4px 9px;
+  outline: none;
+  border-width: 1px;
+  border-style: solid;
+  border-color: rgba(235, 192, 113, 1);
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+  font-family: 'Lato';
+  font-size: 1.125em;
+  color: #ebc071;
+  background-color: inherit;
+  -webkit-transition: all .2s ease;
+  transition: all .2s ease;
+}
+
+.submit:hover {
+  border-color: rgba(235, 192, 113, 0.7);
+  background-color: rgba(255,255,255,0.1);
 }
