--- a/src/components/FieldGroup/FieldGroup.css
+++ b/src/components/FieldGroup/FieldGroup.css
@@ -9,8 +9,9 @@
   outline: none;
   font-family: 'Lato';
   font-size: 13px;
-  color: #c3cacc;
+  color: #fefefd;
   background-color: inherit;
+  /*border: none;*/
   border-width: 0;
   border-style: solid;
   border-bottom: none;
@@ -25,17 +26,25 @@
   transition: all .2s ease;
 }
 
+.textarea {
+  min-height: 170px;
+}
+
 .field-label {
   position: absolute;
   top: 12px;
   left: 10px;
-  opacity: .5;
+  color: #fefefd;
   font-size: 13px;
+  font-family: 'Lato';
 }
 
 .field-control:hover,
+.field-control:active,
+.field-control:focus,
 .field-control.not-empty {
   border-width: 1px;
+  /*box-shadow: inset 0 1px 0px 0px rgba(0,0,0,0.1), 1px 0px 0px 0px rgba(0,0,0,0.1), -1px 0px 0px 0px rgba(0,0,0,0.1);*/
 }
 
 .field-control:hover ~ .field-label,
@@ -45,7 +54,6 @@
     -webkit-transform: translateY(-27px);
     -ms-transform: translateY(-27px);
     transform: translateY(-27px);
-    opacity: 1;
     font-size: 11px;
 }
 
@@ -54,6 +62,7 @@
   width: 100%;
   background-color: rgba(224, 184, 110, 1);
 }
+.field-bar-textarea {margin-top: -5px;}
 
 .field-bar:before,
 .field-bar:after {
@@ -68,10 +77,10 @@
   width: 0;
 }
 
-.field-control:hover ~ .field-bar:before,
+/*.field-control:hover ~ .field-bar:before,
 .field-control:active ~ .field-bar:before,
 .field-control:focus ~ .field-bar:before,
 .field-control.not-empty ~ .field-bar:before {
   width: 100%;
-  background-color: rgba(224, 184, 0, 1);
-}
+  background-color: rgba(224, 184, 110, 1);
+}*/
