--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -15,15 +15,9 @@
   --brand-color: #61dafb;
 }
 
-.root {
-  background: #f9ecde;
-  color: #000;
-}
-
-.container {
-  margin: 0 auto;
+.header {
   padding: 20px 0;
-  max-width: var(--max-content-width);
+  background-color: rgba(0, 0, 0, 0.4);
 }
 
 .brand {
