onetack first page

--- a/src/components/Feedback/Feedback.css
+++ b/src/components/Feedback/Feedback.css
@@ -31,8 +31,8 @@
   border-color: rgba(235, 192, 113, 1);
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
-  font-family: 'Lato';
-  font-size: 1.125em;
+  font-family: 'Drugs';
+  font-size: 1em;
   color: #ebc071;
   background-color: inherit;
   -webkit-transition: all .2s ease;
