--- a/src/components/FieldGroup/FieldGroup.css
+++ b/src/components/FieldGroup/FieldGroup.css
@@ -58,6 +58,7 @@
     -ms-transform: translateY(-27px);
     transform: translateY(-27px);
     font-size: 11px;
+    color: #ebc071;
 }
 
 .field-bar {
