--- a/src/components/FieldGroup/FieldGroup.css
+++ b/src/components/FieldGroup/FieldGroup.css
@@ -25,6 +25,10 @@
   -webkit-transition: all .2s ease;
   transition: all .2s ease;
 }
+.field-control.invalid {
+  border-width: 1px;
+  border-color: rgba(255, 0, 0, 1);
+}
 
 .textarea {
   min-height: 170px;
